File select fixes: - some layout issues - selecting a single file - missing mime options - file uploads

--- a/filemanager/templates/default/app.css
+++ b/filemanager/templates/default/app.css
@@ -15,8 +15,8 @@
 /**
  * Select file dialog
  */
-.selectPath { font-weight: bold; }
-.selectPathContainer { width: 480px; overflow: auto; }
+.selectPath { font-weight: bold; width: 98% }
+.selectPathContainer { width: 470px; overflow: auto; }
 .selectName input { width: 100%; }
 .selectMime select { width: 100%; }
 /*.selectIcon img { height: 16px; }*/
